--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -16,6 +16,5 @@ jobs:
   say_hello:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-        echo "Hello ${{ github.event.inputs.name }}!"
-        echo "- in ${{ github.event.inputs.home }}!"
+      - run: echo "Hello ${{ github.event.inputs.name }}!"
+      - run: echo "- in ${{ github.event.inputs.home }}!"
